--- a/CardboardSample/src/main/AndroidManifest.xml
+++ b/CardboardSample/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk android:minSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
@@ -14,12 +16,14 @@
             android:label="@string/app_name" >
 
         <activity
-                android:screenOrientation="landscape"
                 android:name=".MainActivity"
-                android:label="@string/app_name" >
+                android:label="@string/app_name"
+                android:screenOrientation="landscape"
+                android:configChanges="orientation|keyboardHidden|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="com.google.intent.category.CARDBOARD" />
             </intent-filter>
         </activity>
     </application>
