--- a/CardboardSample/src/main/AndroidManifest.xml
+++ b/CardboardSample/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
